"ensure text remains visible..."

--- a/font/Sans/cmun-sans.css
+++ b/font/Sans/cmun-sans.css
@@ -7,6 +7,7 @@
 		 url('cmunss.svg#cmunss') format('svg');
 	font-weight: normal;
 	font-style: normal;
+  font-display: swap;
 }
 
 
@@ -19,6 +20,7 @@
 		 url('cmunsx.svg#cmunsx') format('svg');
 	font-weight: bold;
 	font-style: normal;
+  font-display: swap;
 }
 
 
@@ -31,6 +33,7 @@
 		 url('cmunsi.svg#cmunsi') format('svg');
 	font-weight: normal;
 	font-style: italic;
+  font-display: swap;
 }
 
 
@@ -43,5 +46,6 @@
 		 url('cmunso.svg#cmunso') format('svg');
 	font-weight: bold;
 	font-style: italic;
+  font-display: swap;
 }
 
